benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/debug/bignum_Mul_iter6_error.log
=== Verification Error - Iteration 6 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_Mul.rs
Time: 2025-09-15 20:39:19

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:56:5
   |
56 | /     for i in (0..max_len).rev() {
57 | |         let pos = i;
58 | |         let bit1 = pos < a.len() && a[a.len() - 1 - pos as usize] == '1';
59 | |         let bit2 = pos < b.len() && b[b.len() - 1 - pos as usize] == '1';
...  |
63 | |         temp.push(if bit { '1' } else { '0' });
64 | |     }
   | |_____^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:56:14
   |
56 |     for i in (0..max_len).rev() {
   |              ^^^^^^^^^^^^^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.

--------------------------------------------------------------------------------

Additional Output:
error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:56:5
   |
56 | /     for i in (0..max_len).rev() {
57 | |         let pos = i;
58 | |         let bit1 = pos < a.len() && a[a.len() - 1 - pos as usize] == '1';
59 | |         let bit2 = pos < b.len() && b[b.len() - 1 - pos as usize] == '1';
...  |
63 | |         temp.push(if bit { '1' } else { '0' });
64 | |     }
   | |_____^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error[E0277]: the trait bound `std::iter::Rev<std::ops::Range<usize>>: vstd::pervasive::ForLoopGhostIteratorNew` is not satisfied
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_grok-code_15-09_18h47/bignum_Mul_impl.rs:56:14
   |
56 |     for i in (0..max_len).rev() {
   |              ^^^^^^^^^^^^^^^^^^ the trait `vstd::pervasive::ForLoopGhostIteratorNew` is not implemented for `std::iter::Rev<std::ops::Range<usize>>`
   |
   = help: the following other types implement trait `vstd::pervasive::ForLoopGhostIteratorNew`:
             std::collections::hash_map::Iter<'a, Key, Value>
             std::collections::hash_map::Keys<'a, Key, Value>
             std::collections::hash_map::Values<'a, Key, Value>
             std::collections::hash_set::Iter<'a, Key>
             std::collections::vec_deque::Iter<'a, T>
             std::ops::Range<A>
             std::slice::Iter<'a, T>
             std::str::Chars<'a>
             std::vec::IntoIter<T, A>

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
